# grasim

./: Chvatal.graph  Coxeter.graph  Dodecahedron.graph  Franklin.graph  Grotzsch.graph  Heawood.graph  Herschel.graph  HouseX.graph  Icosahedron.graph  Levi.graph  Nonline.graph  Noperfectmatching.graph  Petersen.graph  README.md  TODO  Tetrahedron.graph  Thomassen.graph  Tutte.graph  Zachary.graph  class_slides_03.24.graph  flake.nix  install.bat  pyproject.toml  s.graph  save01.graph  start-updated.bat  start.bat  todo
saves/: 0-vertice.graph  00-hello.graph  02-Andre_Keller.graph  03-sbahn.graph  04-Andre_Keller.graph  04-decimal.graph  07-not-all-heuristic.graph  07-null-distance.graph  Andre_Keller.graph  Folkman.graph  Grotzsch.graph  House.graph  Krackhardt_Kite.graph  McGee.graph  Octahedral.graph  Robertson.graph  Smallestcyclicgroup.graph  bull.graph  hello.graph  sbahn.graph
saves/00-tests/: 01-error-singlenode.graph  02-error-two.graph  03-small.graph  04-unconnected.graph  05-zero-distance-astar-path.graph  06-zero-distance-astar.graph  07-zero-distance-dijkstra-path-after-end.graph  08-zero-distance.graph  09-directed.graph  10-directed2.graph  11-triangle.graph  12-polygon.graph  13-full-conntected-popy.graph
saves/01-iwanowskis_examples/: 01-sbahnDirectedBlankeneseHarburg.txt
saves/directed/: minimal-without-solution.graph  minimal_double_sep.graph  minimal_doubledirected.graph
saves/famous_graphs/: Chvatal.graph  Coxeter.graph  Cubical.graph  Diamond.graph  (+27 more)
src/: bidirectional_djkstrar.py
test/: test_parse_file.py
tests/: test_savefile.py
(+13 files in other folders)
